# argser

./: Cargo.toml  README.md
.github/workflows/: release-argser.yml  release-macros.yml
argser/: Cargo.toml  README.md
argser-macros/: Cargo.toml  README.md
argser-macros/src/: argser.rs  lib.rs
argser-macros/src/argser/: attributes.rs
argser/examples/: simple_ci.rs
argser/src/: lib.rs  provider.rs  traits.rs
argser/src/provider/: cli.rs  envs.rs  fixed.rs
argser/tests/: map.rs  simple_struct.rs  subcategorys.rs
