[package]
name = "argser-macros"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.72", features = ["full"] }
proc-macro2 = { version = "1.0.27" }
quote = "1.0"
