[package]
name = "argser-macros"
version = "0.2.2"
edition = "2018"
authors = ["lol3rrr <lol3r@lol3r.net>"]
license = "MIT"
description = "Provides the Macros for the Argser-Crate"
repository = "https://github.com/Lol3rrr/argser"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.72", features = ["full"] }
proc-macro2 = { version = "1.0.27" }
quote = "1.0"
