[package]
name = "argser"
version = "0.2.3"
edition = "2018"
authors = ["lol3rrr <lol3r@lol3r.net>"]
license = "MIT"
description = "Allows you to easily parse and handle CLI-Arguments"
repository = "https://github.com/Lol3rrr/argser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argser-macros = { path = "../argser-macros/", version = "0.2.2" }
